Fix progress on jump

--- a/src/components/Progress.module.css
+++ b/src/components/Progress.module.css
@@ -9,4 +9,5 @@
   border-radius: 6.25rem;
   background-color: white;
   transform: translateY(-0.0625rem);
+  width: 0%;
 }
